--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,9 @@ plugins {
 android {
     compileSdk 32
 
+    aaptOptions.cruncherEnabled = false
+    aaptOptions.useNewCruncher = false
+
     defaultConfig {
         applicationId "com.tarikyasar.eggtimer"
         minSdk 23
