--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,17 +4,17 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk projectConfig.compileSdk
 
     aaptOptions.cruncherEnabled = false
     aaptOptions.useNewCruncher = false
 
     defaultConfig {
-        applicationId "com.tarikyasar.eggtimer"
-        minSdk 30
-        targetSdk 32
-        versionCode 4
-        versionName "1.0.2"
+        applicationId projectConfig.id
+        minSdk projectConfig.minSdk
+        targetSdk projectConfig.targetSdk
+        versionCode projectConfig.versionCode
+        versionName projectConfig.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,17 +41,5 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation 'com.github.Borutsky:neumorphism-android:1.0.0-alpha01'
+    addDependencies(dependencies, appDependencies)
 }
