--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    apply from: 'gradle/dependencies.gradle'
+    apply from: 'gradle/config.gradle'
+}
+
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
